# silero_vad

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cc
front_vad/: denoiser.h  resampler.h
vad/: onnx_model.cc  onnx_model.h  vad_model.cc  vad_model.h
